@@ -6,13 +6,13 @@ README.txt
 
    To use Roller, follow the instructions in the Users Guide:
    http://www.rollerweblogger.org/wiki/Wiki.jsp?page=UserGuide
-   
-       
+          
 CREDITS AND COPYRIGHT NOTICES
 
    Roller is Copyright (c) by 
        David M Johnson
        Anil Gangolli
+       Allen Gilliland
        Mindaguas Idzelis 
        Lance Lanvandowska 
        Matt Raible 
@@ -20,26 +20,26 @@ CREDITS AND COPYRIGHT NOTICES
        Henri Yandell
        Sun Microsystems, Inc
    	   
-   Roller is licensed under the Apache 1.0 license (s/Apache/Roller)
+   Roller is licensed under the Apache Licence Version 2.0
 
    Additionally, Roller contains a number of third-party software components
    and source code from other open source projects with compatible licenses.
 
    * Roller includes software developed by the Apache Software Foundation
-     Copyright (c) 2001 The Apache Software Foundation. 
+     Copyright (c) The Apache Software Foundation. 
      All rights reserved.
 
    * Roller includes software developed by The OpenSymphony Group
-     Copyright (c) 2001 The OpenSymphony Group. All rights reserved.
+     Copyright (c) The OpenSymphony Group. All rights reserved.
 
    * Roller includes the Hibernate persistence library, LGPL license
 
    * Roller includes code from Blojsom
-        Copyright (c) 2003, David A. Czarnecki & Mark Lussier.
+        Copyright (c) David A. Czarnecki & Mark Lussier.
         All rights reserved
         
    * Roller includes JDOM
-        Copyright (c) 2000-2002 Brett McLaughlin & Jason Hunter.
+        Copyright (c) Brett McLaughlin & Jason Hunter.
         All rights reserved.
 
    * Roller includes the Ekit HTML editor by Howard Kistler, LGPL license
@@ -51,7 +51,7 @@ CREDITS AND COPYRIGHT NOTICES
    * Roller includes the Radeox Wiki Engine, LGPL license
 
    * Roller includes Jython
-     Copyright (c) 2000, Jython Developers
+     Copyright (c) Jython Developers
 
     
 
